[JENKINS-42515] eliminate spacing issue on "has no runs but has branches" empty state by just applying spacing directly to .btn

--- a/blueocean-dashboard/src/main/less/placeholder.less
+++ b/blueocean-dashboard/src/main/less/placeholder.less
@@ -55,8 +55,7 @@
         margin-top: 10px;
     }
 
-    // for button
-    .message + * {
+    .btn {
         margin-top: 25px;
     }
 }
